--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -31,7 +31,7 @@ body {
 	//======================================
 	// Class selectors used by JS functions
 	//======================================
-	// Light/Dark mode background and text colors for Home component
+	// Light/Dark mode -- Home component -- background and text colors
 	.js-set-home-background-and-text-color-dark-mode-false {
 		background-color: v.$mode-home-background-color-light;
 		color: v.$mode-home-text-color-light;
@@ -41,7 +41,7 @@ body {
 		color: v.$mode-home-text-color-dark;
 	}
 
-	// Light/Dark mode background color and opacity for blurred-background
+	// Light/Dark mode -- blurred-background -- background color and opacity
 	.js-set-blurred-background-background-color-and-opacity-dark-mode-false {
 		background-color: v.$mode-blurred-background-background-color-light;
 		opacity: v.$mode-blurred-background-opacity-light;
@@ -51,7 +51,7 @@ body {
 		opacity: v.$mode-blurred-background-opacity-dark;
 	}
 
-	// Light/Dark mode background color and opacity for click to close blurred-background
+	// Light/Dark mode -- click-to-close-blurred-background -- background color and opacity
 	.js-set-click-to-close-blurred-background-background-color-and-opacity-dark-mode-false {
 		background-color: v.$mode-blurred-background-background-color-light;
 		opacity: v.$mode-click-to-close-blurred-background-opacity-light;
@@ -61,7 +61,7 @@ body {
 		opacity: v.$mode-click-to-close-blurred-background-opacity-dark;
 	}
 
-	// Light/Dark mode text colors with hover for base icon-buttons
+	// Light/Dark mode -- base icon-buttons -- text colors with hover
 	.js-set-base-icon-button-text-color-with-hover-dark-mode-false {
 		color: v.$mode-base-icon-button-text-color-light;
 
@@ -79,7 +79,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode text colors with hover for more distinct icon-buttons
+	// Light/Dark mode -- more distinct icon-buttons -- text colors with hover
 	.js-set-more-distinct-icon-button-text-color-with-hover-dark-mode-false {
 		color: v.$mode-more-distinct-icon-button-text-color-light;
 
@@ -97,7 +97,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode border and background colors for CustomCheckbox
+	// Light/Dark mode -- CustomCheckbox -- border and background colors 
 	.js-set-custom-checkbox-border-and-background-color-dark-mode-false {
 		border: 1px solid v.$mode-custom-checkbox-border-color-light;
 		background-color: v.$mode-custom-checkbox-background-color-light;
@@ -135,7 +135,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode text colors for universal-text-grayed-out
+	// Light/Dark mode -- universal-text-grayed-out -- text colors
 	.js-set-universal-text-grayed-out-text-color-dark-mode-false {
 		color: v.$mode-universal-text-grayed-out-text-color-light;
 	}
@@ -143,47 +143,7 @@ body {
 		color: v.$mode-universal-text-grayed-out-text-color-dark;
 	}
 
-	// Light/Dark mode border colors for list rows
-	.js-set-list-row-border-color-dark-mode-false {
-		border-color: v.$mode-list-row-border-color-light;
-	}
-	.js-set-list-row-border-color-dark-mode-true {
-		border-color: v.$mode-list-row-border-color-dark;
-	}
-
-	// Light/Dark mode hover background colors for list rows
-	.js-set-list-row-hover-background-color-dark-mode-false {
-		// Only hover since active causes td to cover border
-		&:hover {
-			background-color: v.$mode-list-row-hover-background-color-light;
-		}
-	}
-	.js-set-list-row-hover-background-color-dark-mode-true {
-		// Only hover since active causes td to cover border
-		&:hover {
-			background-color: v.$mode-list-row-hover-background-color-dark;
-		}
-	}
-
-	// Light/Dark mode selected background colors for list rows
-	.js-set-list-row-selected-background-color-dark-mode-false {
-		background-color: v.$mode-list-row-selected-background-color-light;
-	}
-	.js-set-list-row-selected-background-color-dark-mode-true {
-		background-color: v.$mode-list-row-selected-background-color-dark;
-	}
-
-	// Light/Dark mode box shadow, background, and text color for list headers
-	.js-set-list-header-box-shadow-and-background-color-dark-mode-false {
-		box-shadow: v.$mode-list-header-box-shadow-light;
-		background-color: v.$mode-list-header-background-color-light;
-	}
-	.js-set-list-header-box-shadow-and-background-color-dark-mode-true {
-		box-shadow: v.$mode-list-header-box-shadow-dark;
-		background-color: v.$mode-list-header-background-color-dark;
-	}
-
-	// Light/Dark mode border and background colors for TopBar
+	// Light/Dark mode -- TopBar -- border and background colors 
 	.js-set-top-bar-border-and-background-color-dark-mode-false {
 		border-color: v.$mode-top-bar-border-color-light;
 		background-color: v.$mode-top-bar-background-color-light;
@@ -193,7 +153,7 @@ body {
 		background-color: v.$mode-top-bar-background-color-dark;
 	}
 
-	// Light/Dark mode border, background, and text color for TopBar buttons
+	// Light/Dark mode -- TopBar buttons -- border, background, and text color
 	.js-set-top-bar-button-border-background-text-color-dark-mode-false {
 		border-color: v.$mode-top-bar-button-border-color-light;
 		background-color: v.$mode-top-bar-button-background-color-light;
@@ -205,7 +165,7 @@ body {
 		color: v.$mode-top-bar-button-text-color-dark;
 	}
 
-	// Light/Dark mode background and text colors for TopBar search-bar
+	// Light/Dark mode -- TopBar search-bar -- background and text colors
 	.js-set-top-bar-search-bar-background-text-color-dark-mode-false {
 		background-color: v.$mode-top-bar-search-bar-background-color-light;
 		color: v.$mode-top-bar-search-bar-text-color-light;
@@ -215,7 +175,7 @@ body {
 		color: v.$mode-top-bar-search-bar-text-color-dark;
 	}
 
-	// Light/Dark mode background colors for CreateItemSidebar component
+	// Light/Dark mode -- CreateItemSidebar component -- background colors
 	.js-set-create-item-sidebar-background-color-dark-mode-false {
 		background-color: v.$mode-create-item-sidebar-background-color-light;
 	}
@@ -223,7 +183,7 @@ body {
 		background-color: v.$mode-create-item-sidebar-background-color-dark;
 	}
 
-	// Light/Dark mode border, background, text color, and focus box shadow for CreateItemSidebar form-input
+	// Light/Dark mode -- CreateItemSidebar form-input -- border, background, text color, and focus box shadow
 	.js-set-create-item-sidebar-form-input-border-background-text-color-focus-box-shadow-dark-mode-false {
 		border-color: v.$mode-create-item-sidebar-form-input-border-color-light;
 		background-color: v.$mode-create-item-sidebar-form-input-background-color-light;
@@ -247,7 +207,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode CreateItemSidebar disabled form-label
+	// Light/Dark mode -- CreateItemSidebar -- disabled form-label
 	.js-set-create-item-sidebar-diabled-label-dark-mode-false {
 		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-light;
 		pointer-events: none;
@@ -257,7 +217,7 @@ body {
 		pointer-events: none;
 	}
 
-	// Light/Dark mode CreateItemSidebar disabled form-input type date
+	// Light/Dark mode -- CreateItemSidebar -- disabled form-input type date
 	.js-set-create-item-sidebar-diabled-input-date-dark-mode-false {
 		background-color: v.$mode-create-item-sidebar-form-input-disabled-background-color-light;
 		color: v.$mode-create-item-sidebar-form-input-disabled-text-color-dark;
@@ -269,7 +229,7 @@ body {
 		pointer-events: none;
 	}
 
-	// Light/Dark mode focus box shadow for CreateItemSidebar form-submit button
+	// Light/Dark mode -- CreateItemSidebar form-submit button -- focus box shadow
 	.js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-false {
 		&:focus {
 			box-shadow: v.$mode-create-item-sidebar-form-submit-button-focus-box-shadow-color-light;
@@ -285,7 +245,47 @@ body {
 		}
 	}
 
-	// Light/Dark mode background color for DeleteModal component
+	// Light/Dark mode -- list rows -- border colors
+	.js-set-list-row-border-color-dark-mode-false {
+		border-color: v.$mode-list-row-border-color-light;
+	}
+	.js-set-list-row-border-color-dark-mode-true {
+		border-color: v.$mode-list-row-border-color-dark;
+	}
+
+	// Light/Dark mode -- list rows -- hover background colors
+	.js-set-list-row-hover-background-color-dark-mode-false {
+		// Only hover since active causes td to cover border
+		&:hover {
+			background-color: v.$mode-list-row-hover-background-color-light;
+		}
+	}
+	.js-set-list-row-hover-background-color-dark-mode-true {
+		// Only hover since active causes td to cover border
+		&:hover {
+			background-color: v.$mode-list-row-hover-background-color-dark;
+		}
+	}
+
+	// Light/Dark mode -- list rows -- selected background colors
+	.js-set-list-row-selected-background-color-dark-mode-false {
+		background-color: v.$mode-list-row-selected-background-color-light;
+	}
+	.js-set-list-row-selected-background-color-dark-mode-true {
+		background-color: v.$mode-list-row-selected-background-color-dark;
+	}
+
+	// Light/Dark mode -- list headers -- box shadow, background, and text colors
+	.js-set-list-header-box-shadow-and-background-color-dark-mode-false {
+		box-shadow: v.$mode-list-header-box-shadow-light;
+		background-color: v.$mode-list-header-background-color-light;
+	}
+	.js-set-list-header-box-shadow-and-background-color-dark-mode-true {
+		box-shadow: v.$mode-list-header-box-shadow-dark;
+		background-color: v.$mode-list-header-background-color-dark;
+	}
+
+	// Light/Dark mode -- DeleteModal component -- background color
 	.js-set-delete-modal-background-color-dark-mode-false {
 		background-color: v.$mode-delete-modal-background-color-light;
 	}
@@ -293,7 +293,7 @@ body {
 		background-color: v.$mode-delete-modal-background-color-dark;
 	}
 
-	// Light/Dark mode background color (with hover) for DeleteModal cancel-button
+	// Light/Dark mode -- DeleteModal cancel-button -- background color (with hover)
 	.js-set-delete-modal-cancel-button-background-color-dark-mode-false {
 		background-color: v.$mode-delete-modal-cancel-button-background-color-light;
 
@@ -311,7 +311,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode border, background, and text color for ItemViewTopBar options-button
+	// Light/Dark mode -- temViewTopBar options-button -- border, background, and text colors
 	.js-set-item-view-top-bar-options-button-clicked-border-background-text-color-dark-mode-false {
 		border-color: v.$mode-top-bar-button-border-color-light;
 		background-color: v.$mode-top-bar-button-background-color-light;
@@ -325,7 +325,7 @@ body {
 		color: v.$mode-more-distinct-icon-button-hover-text-color-dark;
 	}
 
-	// Light/Dark mode hover background color for ItemViewTopBar options-dropdown-row
+	// Light/Dark mode -- ItemViewTopBar options-dropdown-row -- hover background color
 	.js-set-item-view-top-bar-options-dropdown-row-hover-background-color-dark-mode-false {
 		&:hover,
 		:active {
@@ -339,7 +339,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode background colors for ItemView item-box
+	// Light/Dark mode -- ItemView item-box -- background colors
 	.js-set-item-view-item-box-background-color-dark-mode-false {
 		background-color: v.$mode-item-view-item-box-background-color-light;
 	}
@@ -347,7 +347,7 @@ body {
 		background-color: v.$mode-item-view-item-box-background-color-dark;
 	}
 
-	// Light/Dark mode border color for ItemViewListSidebar
+	// Light/Dark mode -- ItemViewListSidebar -- border colors
 	.js-set-item-view-list-sidebar-border-color-mode-false {
 		border-color: v.$mode-item-view-list-sidebar-border-color-light;
 	}
@@ -355,7 +355,7 @@ body {
 		border-color: v.$mode-item-view-list-sidebar-border-color-dark;
 	}
 
-	// Light/Dark mode border, background (with hover), and text color for ItemViewListSidebar expand-minimize-button
+	// Light/Dark mode -- ItemViewListSidebar expand-minimize-button -- border, background (with hover), and text colors
 	.js-set-item-view-list-sidebar-expand-minimize-button-border-and-background-color-mode-false {
 		border-color: v.$mode-item-view-list-sidebar-expand-minimize-button-border-color-light;
 		background-color: v.$mode-item-view-list-sidebar-expand-minimize-button-background-color-light;
@@ -375,7 +375,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode border, background, text color, and focus box shadow for ItemView and ItemViewEditItemInfo form-input
+	// Light/Dark mode -- ItemView form-input -- border, background, text color, and focus box shadow
 	.js-set-item-view-form-input-border-background-text-color-focus-box-shadow-dark-mode-false {
 		border-color: v.$mode-item-view-form-input-border-color-light;
 		background-color: v.$mode-item-view-form-input-background-color-light;
@@ -399,7 +399,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode border, background, text color, and focus box shadow (top, bottom, left) for ItemView and ItemViewEditItemInfo form-input for name
+	// Light/Dark mode --  ItemViewEditItemInfo form-input for name -- border, background, text color, and focus box shadow (top, bottom, left)
 	.js-set-item-view-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-false {
 		border-color: v.$mode-item-view-form-input-border-color-light;
 		background-color: v.$mode-item-view-form-input-background-color-light;
@@ -423,7 +423,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode box shadow (top, bottom, left) for ItemView and ItemViewEditItemInfo name char-count-container
+	// Light/Dark mode -- ItemViewEditItemInfo name char-count-container -- box shadow (top, bottom, left)
 	.js-set-item-view-form-name-char-count-container-top-bottom-right-box-shadow-dark-mode-false {
 		box-shadow: v.$mode-item-view-form-name-char-count-container-top-bottom-right-box-shadow-color-light;
 		-moz-box-shadow: v.$mode-item-view-form-name-char-count-container-top-bottom-right-box-shadow-color-light;
@@ -435,7 +435,7 @@ body {
 		-webkit-box-shadow: v.$mode-item-view-form-name-char-count-container-top-bottom-right-box-shadow-color-dark;
 	}
 
-	// Light/Dark mode ItemView and ItemViewEditItemInfo disabled form-label
+	// Light/Dark mode -- ItemViewEditItemInfo -- disabled form-label
 	.js-set-item-view-diabled-label-dark-mode-false {
 		color: v.$mode-item-view-form-input-disabled-text-color-light;
 		pointer-events: none;
@@ -445,7 +445,7 @@ body {
 		pointer-events: none;
 	}
 
-	// Light/Dark mode ItemView and ItemViewEditItemInfo disabled form-input type date
+	// Light/Dark mode -- ItemViewEditItemInfo -- disabled form-input type date
 	.js-set-item-view-diabled-input-date-dark-mode-false {
 		background-color: v.$mode-item-view-form-input-disabled-background-color-light;
 		color: v.$mode-item-view-form-input-disabled-text-color-dark;
@@ -457,7 +457,7 @@ body {
 		pointer-events: none;
 	}
 
-	// Light/Dark mode focus box shadow for ItemView and ItemViewEditItemInfo form-submit button
+	// Light/Dark mode -- ItemView form-submit button -- focus box shadow
 	.js-set-item-view-submit-button-focus-box-shadow-dark-mode-false {
 		&:focus {
 			box-shadow: v.$mode-item-view-form-submit-button-focus-box-shadow-color-light;
@@ -473,7 +473,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode background color (with hover) for ItemView and ItemViewEditItemInfo form cancel button
+	// Light/Dark -- ItemView form cancel button -- mode background color (with hover)
 	.js-set-item-view-cancel-button-button-background-color-mode-false {
 		background-color: v.$mode-item-view-form-cancel-button-background-color-light;
 
@@ -491,7 +491,7 @@ body {
 		}
 	}
 	
-	// Light/Dark mode text color (with hover) for ItemViewCommentBoxIndividualComment icon-button
+	// Light/Dark mode -- ItemViewCommentBoxIndividualComment icon-button -- text color (with hover)
 	.js-set-item-view-comment-box-individual-comment-icon-button-text-color-mode-false {
 		color: v.$mode-item-view-comment-box-individual-comment-icon-button-text-color-light;
 
