--- a/client/src/CSS/scss_partials/basic/_toggleSwitch.scss
+++ b/client/src/CSS/scss_partials/basic/_toggleSwitch.scss
@@ -14,22 +14,19 @@
 		position: relative;
 		float: left;
 		margin-left: 6px;
-		border: solid v.$basic-toggle-switch-on-color 3px;
+		border: solid v.$mode-toggle-switch-on-border-color-light 3px;
 		border-radius: 25px;
-		background-color: v.$basic-toggle-switch-on-color;
+		background-color: v.$mode-toggle-switch-on-background-color-light;
 		height: v.$basic-toggle-switch-height;
 		width: 52px;
+		color: v.$mode-toggle-switch-on-text-color-light;
 		cursor: pointer;
 	}
 
-	.toggle-switch--dark-mode {
-		border-color: v.$gray-level-5;
-		background-color: v.$gray-level-5;
-	}
-
 	.toggle-switch--off {
-		border-color: v.$basic-toggle-switch-off-color;
-		background-color: v.$basic-toggle-switch-off-color;
+		border-color: v.$mode-toggle-switch-off-border-color-light;
+		background-color: v.$mode-toggle-switch-off-background-color-light;
+		color: v.$mode-toggle-switch-off-text-color-light;
 	}
 	
 	.toggle-switch__text {
@@ -37,7 +34,6 @@
 		@include m.stop-text-selection();
 
 		left: 4px;
-		color: white;
 		font-size: 12px;
 		font-weight: bold;
 	}
@@ -46,7 +42,6 @@
 		// Resets left
 		left: auto;
 		right: 3px;
-		color: v.$gray-level-3;
 	}
 
 	.toggle-switch__circle {
@@ -60,7 +55,7 @@
 		right: 1px;
 		border: solid silver 1px;
 		border-radius: 100px;
-		background-color: white;
+		background-color: v.$mode-toggle-switch-on-circle-background-color-light;
 		height: 18px;
 		width: 18px;
 	}
@@ -68,5 +63,6 @@
 	.toggle-switch__circle--off {
 		right: auto;
 		left: 1px;
+		background-color: v.$mode-toggle-switch-off-circle-background-color-light;
 	}
 }
